add current time

--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,8 @@
 </head>
 <body>
   <h1>Current Time: </h1>
+  <p id="now"></p>
   <h1>End Time: </h1>
+  <script src="popup.js"></script>
 </body>
 </html>
