display end time

--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,8 @@
   <h1>Current Time: </h1>
   <p id="now"></p>
   <h1>End Time: </h1>
+  <p id="end-time"></p>
+  <button id="get-times">Calculate</button>
   <script src="popup.js"></script>
 </body>
 </html>
