add basic styling'

--- a/popup.html
+++ b/popup.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
   <title>Recipe Timer</title>
+  <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-  <h1>Current Time: </h1>
-  <p id="now"></p>
-  <h1>End Time: </h1>
-  <p id="end-time"></p>
-  <button id="get-times">Calculate</button>
+  <h1>Recipe Timer</h1>
+  <p>The time now is <span id="now" class="times"></span></p>
+  <p>If you start now your meal will be ready to eat at <span id="end-time" class="times">...</span></p>
   <script src="popup.js"></script>
 </body>
 </html>
